--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -24,12 +24,12 @@
 	&:after
 		content: ''
 		left: -147px
-		bottom: -149px
+		bottom: -118px
 		position: absolute
 		z-index: -5
 		width: 344px
 		height: 119px
-		transform: rotate(24deg) skew(19deg)
+		transform: rotate(18deg) skew(19deg)
 		background: #fff6d3
 		border-radius: 4px
 
@@ -220,9 +220,14 @@ $width: 1000px
 		transition-duration: $duration
 
 		&[data-number='item1']
-			top: $width/7.2692
-			left: $width/5.35
-			transform: rotate(53deg)
+			width: 423.28042328px
+			height: 423.28042328px
+			zoom: 1.01
+
+			top: 135.87013px
+			left: 182.890877px
+
+			transform: rotate(52.7deg)
 
 			background-image: url("../images/cheese/piece1.png")
 
