--- a/_frontend/blocks/footer/style.scss
+++ b/_frontend/blocks/footer/style.scss
@@ -3,7 +3,7 @@
     padding: 50px 0;
     background: url("../images/footer-bg.jpg");
     @include media(lg) {
-        background-size: cover;
+        background-size: auto;
         background-position: center;
     }
 
