--- a/_frontend/blocks/header/style.scss
+++ b/_frontend/blocks/header/style.scss
@@ -2,10 +2,10 @@
     position: relative;
     background: rgba(255, 255, 255, 0.5);
     text-align: right;
-    z-index: 2;
+    z-index: 101;
 
-    &__nav, 
-    &__logo, 
+    &__nav,
+    &__logo,
     &__nav-btn,
     &__map-btn {
         display: inline-block;
@@ -56,11 +56,11 @@
             fill: #979695;
             margin-bottom: 7px;
         }
-        &:hover{
+        &:hover {
             color: $color-link-hover;
 
             & svg {
-            fill: $color-link-hover!important;
+                fill: $color-link-hover!important;
             }
         }
     }
@@ -68,8 +68,8 @@
     &__modal {
         position: absolute;
         z-index: 100;
-        top: -1000%; 
-        left: 50%; 
+        top: -1000%;
+        left: 50%;
         -ms-transform: translateX(-50%);
         transform: translateX(-50%);
         width: 80%;
@@ -78,30 +78,31 @@
         background-color: #ffc928;
         transition: top .2s;
         border-radius: 0 0 10px 10px;
-    
+
         &.active {
-            top: 0; 
+            top: 0;
             transition: top .2s
         }
-        &__close
-            {
+        &__close {
             position: absolute;
-            width: 22px; height: 23px;
-            top: 38px; right: 44px;
+            width: 22px;
+            height: 23px;
+            top: 38px;
+            right: 44px;
             cursor: pointer;
         }
         &_mobile {
             display: none;
-            float: left; 
+            float: left;
             width: 100%;
             padding-bottom: 50px;
-    }
+        }
     }
     @media (max-width: 1000px) {
         &__modal {
             padding: 60px 20px 20px;
             width: 90%;
-            
+
             &_mobile {
                 display: block;
             }
