--- a/_frontend/blocks/slider/style.scss
+++ b/_frontend/blocks/slider/style.scss
@@ -91,7 +91,7 @@
         transform: translatex(-50%);
         bottom: -7.5px;
         overflow: hidden;
-
+        min-width: 195px;
         li {
             display: block;
             float: left;
