--- a/_frontend/blocks/_element/style.scss
+++ b/_frontend/blocks/_element/style.scss
@@ -23,9 +23,12 @@
     font-size: 48px;
     font-weight: 700;
     text-align: center;
+    @include media(sm) {
+        font-size: 40px;
+    }
     &_mt-35 {
         margin-top: 35px;
-        @include media(md) {
+        @include media(xl) {
             margin-top: 100px;
         }
 
