--- a/_frontend/blocks/random/style.scss
+++ b/_frontend/blocks/random/style.scss
@@ -100,6 +100,9 @@
         background: hsla(0, 0%, 100%, .9);
         z-index: 10;
         position: relative;
+        &_about {
+            max-width: 357px;
+        }
     }
     &__title {
         font-size: 24px;
