--- a/_frontend/blocks/popular/style.scss
+++ b/_frontend/blocks/popular/style.scss
@@ -79,6 +79,7 @@
             &__text,
             &__description {
                 opacity: 1;
+                vertical-align: top;
                 transition: opacity .3s
             }
         }
