--- a/_frontend/blocks/map/style.scss
+++ b/_frontend/blocks/map/style.scss
@@ -1,4 +1,5 @@
 .map {
+    margin: 45px auto 80px;
     &__region {
         width: 100%;
         height: 550px;
@@ -11,9 +12,9 @@
         line-height: 18px;
         letter-spacing: 0.16px;
         padding-left: 30px;
+        margin-top: 70px;
         li {
             margin-bottom: 25px;
-            cursor: pointer;
             &:before {
                 content: "";
                 width: 18px;
@@ -59,4 +60,46 @@
     }
 }
 
-.map-balloon {}
+
+.map-balloon {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1010;
+    max-width: 276px;
+    margin-top: 12px;
+    margin-left: 116px;
+    &__close {
+        position: absolute;
+        right: 19px;
+        top: 11px;
+        float: right;
+        font-size: 20px;
+        font-weight: bold;
+        line-height: 20px;
+        color: #fff;
+    }
+    &__arrow {
+        bottom: -15px;
+        border: 15px solid transparent;
+        border-left: 15px solid #0091ff;
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+    }
+    &__inner {
+        &__content {
+            width: 227px;
+            padding: 20px;
+            background-color: #0091ff;
+            color: #fff;
+            font-family: PFBeauSansPro;
+            font-size: 16px;
+            line-height: 18px;
+            border-radius: 10px;
+            border-bottom-left-radius: 0;
+        }
+    }
+}
