--- a/_frontend/blocks/cheese/style.sass
+++ b/_frontend/blocks/cheese/style.sass
@@ -157,17 +157,19 @@ $width: 1000px
 	&:before, &:after 
 		content: ''
 		left: 612px
-		top: 954px
+		top: 775px
 		position: absolute
 		z-index: -5
 		width: 200%
 		height: 343px
-		transform: rotate(26deg)
-		background: #f2e9cd
-	&:after 
-		left: 573px
-		top: 965px
-		height: 232px
+		transform: rotate(16deg) skew(19deg)
+		border-radius: 10px
+		background: #fff6d3
+	&:after
+		left: 585px
+		top: 884px
+		height: 237px
+
 	@include media(xl)
 		position: relative
 		float: left
