--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -63,6 +63,18 @@
                 display: none;
             }
         }
+        &_contact {
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            top: 150px;
+            width: 366px;
+            height: 400px;
+            background: url('../images/background/butter-contact.png') no-repeat;
+            @media only screen and (max-width: 1680px) {
+                display: none;
+            }
+        }
     }
     &__cheese-left {
         &_about {
@@ -199,6 +211,16 @@
             transform: skewY(20deg);
             background-color: #fff6d3;
         }
+        &_contact {
+            position: absolute;
+            z-index: -2;
+            left: 0px;
+            top: 320px;
+            width: 25%;
+            height: 105px;
+            transform: skewY(20deg);
+            background-color: #fff6d3;
+        }
     }
     &__block-left-middle-top {
         &_about {
@@ -279,6 +301,16 @@
             left: 0px;
             bottom: 630px;
             width: 270px;
+            height: 180px;
+            transform: skewY(20deg);
+            background-color: #fff6d3;
+        }
+        &_contact {
+            position: absolute;
+            z-index: -1;
+            left: 0px;
+            bottom: 0px;
+            width: 230px;
             height: 180px;
             transform: skewY(20deg);
             background-color: #fff6d3;
@@ -386,6 +418,16 @@
                 right: 0px;
                 top: 300px;
                 width: 310px;
+                height: 285px;
+                transform: skewY(20deg);
+                background-color: #fff6d3;
+            }
+            &_contact {
+                position: absolute;
+                z-index: -2;
+                right: 0px;
+                top: 285px;
+                width: 275px;
                 height: 285px;
                 transform: skewY(20deg);
                 background-color: #fff6d3;
@@ -504,6 +546,20 @@
         background: url('../images/background/cow-right.png') no-repeat;
         @media only screen and (max-width: 1660px) {
             display: none;
+        }
+    }
+    &__tomat-right {
+        &_contact {
+            position: absolute;
+            z-index: -2;
+            right: 0;
+            bottom: 118px;
+            width: 438px;
+            height: 726px;
+            background: url('../images/background/tomat-contact.png') no-repeat;
+            @media only screen and (max-width: 1660px) {
+                display: none;
+            }
         }
     }
     &__top {
