--- a/_frontend/blocks/map/style.scss
+++ b/_frontend/blocks/map/style.scss
@@ -13,6 +13,10 @@
         letter-spacing: 0.16px;
         padding-left: 30px;
         margin-top: 70px;
+        @include media(lg) {
+            padding-left: 0;
+            margin-top: 40px;
+        }
         li {
             margin-bottom: 25px;
             &:before {
@@ -26,6 +30,10 @@
                 display: inline-block;
                 vertical-align: middle;
                 width: 200px;
+            }
+            @include media(lg) {
+                display: inline-block;
+                vertical-align: top;
             }
         }
         &__presence {
