--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -218,6 +218,7 @@
             top: 320px;
             width: 25%;
             height: 105px;
+            border-radius: 10px;
             transform: skewY(20deg);
             background-color: #fff6d3;
         }
