--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -473,12 +473,13 @@
         }
         &_about {
             position: absolute;
-            z-index: -2;
+            z-index: 2;
             right: 0;
             top: 1700px;
             width: 407px;
-            height: 649px;
-            background: url('../images/background/cheese-right-about.png') no-repeat;
+            height: 459px;
+            background: url(../images/slack/cheese.png) no-repeat;
+
             @media only screen and (max-width: 1660px) {
                 display: none;
             }
