--- a/_frontend/blocks/popular/style.scss
+++ b/_frontend/blocks/popular/style.scss
@@ -5,6 +5,12 @@
         padding-top: 40px;
         padding-bottom: 0;
     }
+    &__carousel {
+        margin: 0 -60px;
+        @include media-custom(1400) {
+            margin: 0;
+        }
+    }
     &_pb {
         padding-bottom: 0;
     }
