--- a/_frontend/blocks/recommendation/style.scss
+++ b/_frontend/blocks/recommendation/style.scss
@@ -14,6 +14,9 @@
             width: $i - $value + px;
         }
     }
+    .slick-list {
+        padding: 0 0 20px;
+    }
     .slick-slider {
         padding: 0px;
 
@@ -58,6 +61,8 @@
         background-position: center;
         background-size: auto 110%;
         background-repeat: no-repeat;
+
+        box-shadow: 0 5px 7px 1px rgba(0, 0, 0, 0.1);
         
         transition: background-size .3s;
         @include media(xl) {
