--- a/_frontend/blocks/button/style.scss
+++ b/_frontend/blocks/button/style.scss
@@ -91,6 +91,9 @@
         span {
             width: 272px;
             max-width: 100%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
 }
@@ -105,6 +108,12 @@
 
 .button-orange span:hover {
     background: url("../images/button/button-orange-hover.png");
+}
+
+.button-orange_one-recipe span:hover {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .button-orange span:hover:before {
