--- a/css/style.css
+++ b/css/style.css
@@ -1550,7 +1550,11 @@ input[type="text"]:focus {
   max-width: 100%; }
   .button-orange_one-recipe span {
     width: 272px;
-    max-width: 100%; }
+    max-width: 100%;
+    -webkit-background-size: cover;
+            background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; }
 
 .button-orange span:before {
   background: url("../images/button/button-orange_left.png"); }
@@ -1560,6 +1564,12 @@ input[type="text"]:focus {
 
 .button-orange span:hover {
   background: url("../images/button/button-orange-hover.png"); }
+
+.button-orange_one-recipe span:hover {
+  -webkit-background-size: cover;
+          background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
 
 .button-orange span:hover:before {
   background: url("../images/button/button-orange-hover_left.png"); }
@@ -2827,16 +2837,13 @@ input[type="text"]:focus {
     -webkit-background-size: auto 110%;
             background-size: auto 110%;
     background-repeat: no-repeat;
-<<<<<<< HEAD
+    -webkit-box-shadow: 0 5px 7px 1px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 5px 7px 1px rgba(0, 0, 0, 0.1);
     -webkit-transition: -webkit-background-size .3s;
     transition: -webkit-background-size .3s;
     -o-transition: background-size .3s;
     transition: background-size .3s;
     transition: background-size .3s, -webkit-background-size .3s; }
-=======
-    box-shadow: 0 5px 7px 1px rgba(0, 0, 0, 0.1);
-    transition: background-size .3s; }
->>>>>>> e19f3a355b71cb3dc3b163a8cf17518a3dfd2826
     @media only screen and (max-width: 1200px) {
       .recommendation__block {
         -webkit-background-size: cover;
@@ -4584,11 +4591,7 @@ input[type="text"]:focus {
         display: none; } }
   .background-page__cheese-right_about {
     position: absolute;
-<<<<<<< HEAD
     z-index: -1;
-=======
-    z-index: 2;
->>>>>>> e19f3a355b71cb3dc3b163a8cf17518a3dfd2826
     right: 0;
     top: 1700px;
     width: 407px;
@@ -4945,9 +4948,9 @@ input[type="text"]:focus {
         margin-bottom: 10px; }
       .one-recipe__info-icon__item_time {
         margin-right: 65px; }
-        @media only screen and (max-width: 1200px) {
+        @media only screen and (max-width: 1299px) {
           .one-recipe__info-icon__item_time {
-            margin-right: 45px; } }
+            margin-right: 55px; } }
         @media only screen and (max-width: 992px) {
           .one-recipe__info-icon__item_time {
             margin-right: 10px; } }
