--- a/css/style.css
+++ b/css/style.css
@@ -4081,11 +4081,11 @@ input[type="text"]:focus {
   .background-page__tomat_about {
     position: absolute;
     z-index: -1;
-    left: 0;
+    left: -387px;
     top: -180px;
-    width: 397px;
-    height: 726px;
-    background: url("../images/background/tomato-about.png") no-repeat; }
+    width: 673px;
+    height: 680px;
+    background: url("../images/slack/tomato.png") no-repeat; }
     @media only screen and (max-width: 1680px) {
       .background-page__tomat_about {
         display: none; } }
@@ -4103,11 +4103,13 @@ input[type="text"]:focus {
   .background-page__tomat_one-recipe {
     position: absolute;
     z-index: -1;
-    left: 0;
-    bottom: 100px;
-    width: 483px;
+    left: -188px;
+    bottom: 148px;
+    width: 677px;
     height: 775px;
-    background: url("../images/background/tomat-left_one-recipe.png") no-repeat; }
+    background: url("../images/slack/tomato.png") no-repeat;
+    -webkit-transform: rotateX(180deg) rotateZ(-90deg);
+            transform: rotateX(180deg) rotateZ(-90deg); }
     @media only screen and (max-width: 1680px) {
       .background-page__tomat_one-recipe {
         display: none; } }
@@ -4385,7 +4387,7 @@ input[type="text"]:focus {
     background-color: #fff6d3; }
   .background-page__block-left-middle_one-recipe {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     left: 0px;
     bottom: 630px;
     width: 270px;
@@ -4543,7 +4545,7 @@ input[type="text"]:focus {
     position: absolute;
     z-index: -2;
     right: 0px;
-    top: 285px;
+    top: 250px;
     width: 275px;
     height: 285px;
     -webkit-border-radius: 10px;
@@ -4593,7 +4595,7 @@ input[type="text"]:focus {
     position: absolute;
     z-index: -1;
     right: 0;
-    top: 1700px;
+    top: 1600px;
     width: 407px;
     height: 459px;
     background: url(../images/slack/cheese.png) no-repeat; }
@@ -4657,12 +4659,14 @@ input[type="text"]:focus {
         display: none; } }
   .background-page__tomat-right_contact {
     position: absolute;
-    z-index: -2;
-    right: 0;
-    bottom: 118px;
-    width: 438px;
+    z-index: -1;
+    right: -334px;
+    bottom: 71px;
+    width: 695px;
     height: 726px;
-    background: url("../images/background/tomat-contact.png") no-repeat; }
+    background: url("../images/slack/tomato.png") no-repeat;
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg); }
     @media only screen and (max-width: 1660px) {
       .background-page__tomat-right_contact {
         display: none; } }
