--- a/_frontend/blocks/background-page-catalog-category/style.scss
+++ b/_frontend/blocks/background-page-catalog-category/style.scss
@@ -38,7 +38,7 @@
         position: absolute;
         z-index: -1;
         left: 0px;
-        top: 1070px;
+        top: 1100px;
         width: 250px;
         height: 170px;
         border-radius: 10px;
@@ -58,14 +58,16 @@
     }
     .cheese-left {
         position: absolute;
-        z-index: -2;
-        left: 0;
-        top: 1135px;
-        width: 404px;
-        height: 590px;
-        background: url('../images/background/cheese-left-page-cetegory.png') no-repeat;
+        z-index: -1;
+        left: -135px;
+        top: 1137px;
+        width: 469px;
+        height: 449px;
+        background: url('../images/background/new/cheese-left-page-cetegory1.png') no-repeat center;
+        background-size: contain;
         &_catalog {
-            top: 1030px;
+            left: -155px;
+            top: 994px;
             @media only screen and (max-width: 1600px) {
                 display: none;
             }
@@ -132,17 +134,19 @@
     .cheese-right {
         position: absolute;
         z-index: -1;
-        right: 0;
-        top: 700px;
-        width: 209px;
-        height: 670px;
-        background: url('../images/background/cheese-right-page-category.png') no-repeat;
+        right: -233px;
+        top: 832px;
+        width: 470px;
+        height: 550px;
+        background: url('../images/background/new/cheese-right-page-category1.png') no-repeat center;
+        background-size: contain;
         @media only screen and (max-width: 1400px) {
             display: none;
         }
 
         &_catalog {
-            top: 360px;
+            top: 442px;
+            right: -219px;
             @media only screen and (max-width: 1400px) {
                 display: none;
             }
